rregadmin/hive/key_cell.h

/**
 * @defgroup kc_hive_group KeyCell Object
 *
 * This object handles modifying, creating, etc KeyCells.
 *
 * @ingroup hive_group
 */

G_BEGIN_DECLS

/** Type of key cell type
 *
 * @ingroup kc_hive_group
 */
typedef guint16 key_cell_type;
/** Allocate a new KeyCell in the hive.
 *
 * @ingroup kc_hive_group
 */
KeyCell * key_cell_alloc (Hive *in_hive, offset in_ofs,
                          const ustring *in_name);
/** Deallocate a KeyCell.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_unalloc(KeyCell *in_kc, gboolean in_recursive);
/** Allocate the root key cell.
 *
 * @internal This is used by hive_new() but should almost never be used
 *           by anything else.
 *
 * @ingroup kc_hive_group
 */
KeyCell * key_cell_alloc_root (Hive *in_hive);
/** Convert a Cell to a KeyCell.
 *
 * @ingroup kc_hive_group
 */
KeyCell *key_cell_from_cell (Cell *in_cell);
/** Convert a KeyCell to a Cell.
 *
 * @ingroup kc_hive_group
 */
Cell * key_cell_to_cell (KeyCell *in_kc);
/** Check the validity of a KeyCell.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_is_valid (KeyCell *in_kc);
/** Get the parent KeyCell of this KeyCell.
 *
 * @ingroup kc_hive_group
 */
KeyCell *key_cell_get_parent (KeyCell *in_kc);
/** Get a string representation of the type of this KeyCell.
 *
 * @see key_cell_get_type_id()
 *
 * @ingroup kc_hive_group
 */
const char *key_cell_get_type_str(KeyCell *in_kc);
/** Get the type of this KeyCell.
 *
 * @see KEY_ROOT, KEY_NORMAL, KEY_LINK
 *
 * @ingroup kc_hive_group
 */
key_cell_type key_cell_get_type_id(KeyCell *in_kc);
/** Get the name of the KeyCell.
 *
 * @note You must ustr_free() the return value.
 *
 * @ingroup kc_hive_group
 */
ustring* key_cell_get_name (KeyCell *in_kc);
/** Get the classname of the KeyCell.
 *
 * @note You must ustr_free() the return value.
 *
 * @ingroup kc_hive_group
 */
ustring* key_cell_get_classname (KeyCell *in_kc);
/** Compare two key cell's names.
 *
 * @ingroup kc_hive_group
 */
int key_cell_compare_names(KeyCell *in_kc1, KeyCell *in_kc2);
/** Get the number of values.
 *
 * @ingroup kc_hive_group
 */
guint32 key_cell_get_number_of_values(KeyCell *in_kc);
/** Get value by index.
 *
 * @ingroup kc_hive_group
 */
ValueKeyCell *key_cell_get_value (KeyCell *in_kc, guint32 in_index);
/** Get value by name.
 *
 * @ingroup kc_hive_group
 */
ValueKeyCell *key_cell_get_value_str (KeyCell *in_kc, const char *in_name);
/** Get value by ustring name.
 *
 * @ingroup kc_hive_group
 */
ValueKeyCell *key_cell_get_value_ustr (KeyCell *in_kc, const ustring *in_name);
/** Delete value by index.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_delete_value (KeyCell *in_kc, guint32 in_index);
/** Delete value by name.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_delete_value_str (KeyCell *in_kc, const char *in_name);
/** Delete value by ustring name.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_delete_value_ustr (KeyCell *in_kc, const ustring *in_name);
/** Add a value.
 *
 * @ingroup kc_hive_group
 */
ValueKeyCell* key_cell_add_value (KeyCell *in_kc, const char *in_name,
                                  const Value *in_val);
/** Get the number of subkeys.
 *
 * @ingroup kc_hive_group
 */
guint32 key_cell_get_number_of_subkeys (KeyCell *in_kc);
/** Get a subkey by index.
 *
 * @ingroup kc_hive_group
 */
KeyCell *key_cell_get_subkey (KeyCell *in_kc, guint32 in_index);
/** Get a subkey by name.
 *
 * @ingroup kc_hive_group
 */
KeyCell *key_cell_get_subkey_str (KeyCell *in_kc, const char *in_name);
/** Get a subkey by ustring name.
 *
 * @ingroup kc_hive_group
 */
KeyCell *key_cell_get_subkey_ustr (KeyCell *in_kc, const ustring *in_name);
/** Delete a subkey by index.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_delete_subkey (KeyCell *in_kc, guint32 in_index);
/** Delete a subkey by name.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_delete_subkey_str (KeyCell *in_kc, const char *in_name);
/** Delete a subkey by ustring name.
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_delete_subkey_ustr (KeyCell *in_kc, const ustring *in_name);
/** Add a subkey.
 *
 * @ingroup kc_hive_group
 */
KeyCell *key_cell_add_subkey (KeyCell *in_kc, const ustring *in_name);
/** Set the KeyCell's KeyListCell.
 *
 * @internal
 *
 * @ingroup kc_hive_group
 */
gboolean key_cell_set_key_list_cell(KeyCell *in_kc, KeyListCell *in_klc,
                                    gboolean in_recursive);
/** Get the KeyCell's KeyListCell.
 *
 * @internal
 *
 * @ingroup kc_hive_group
 */
KeyListCell *key_cell_get_key_list_cell (KeyCell *in_kc);