python/rregadmin/hive/key_cell_wrapper.py


key_cell_type = guint16
# ../../../rregadmin/hive/key_cell.h 83
key_cell_alloc = _libraries['librregadmin.so.1'].key_cell_alloc
key_cell_alloc.restype = POINTER(KeyCell)
# key_cell_alloc(in_hive, in_ofs, in_name)
key_cell_alloc.argtypes = [POINTER(Hive), offset, POINTER(ustring)]
key_cell_alloc.__doc__ = \
"""KeyCell * key_cell_alloc(Hive * in_hive, offset in_ofs, unknown * in_name)
../../../rregadmin/hive/key_cell.h:83"""
# ../../../rregadmin/hive/key_cell.h 89
key_cell_unalloc = _libraries['librregadmin.so.1'].key_cell_unalloc
key_cell_unalloc.restype = gboolean
# key_cell_unalloc(in_kc, in_recursive)
key_cell_unalloc.argtypes = [POINTER(KeyCell), gboolean]
key_cell_unalloc.__doc__ = \
"""gboolean key_cell_unalloc(KeyCell * in_kc, gboolean in_recursive)
../../../rregadmin/hive/key_cell.h:89"""
# ../../../rregadmin/hive/key_cell.h 98
key_cell_alloc_root = _libraries['librregadmin.so.1'].key_cell_alloc_root
key_cell_alloc_root.restype = POINTER(KeyCell)
# key_cell_alloc_root(in_hive)
key_cell_alloc_root.argtypes = [POINTER(Hive)]
key_cell_alloc_root.__doc__ = \
"""KeyCell * key_cell_alloc_root(Hive * in_hive)
../../../rregadmin/hive/key_cell.h:98"""
# ../../../rregadmin/hive/key_cell.h 104
key_cell_from_cell = _libraries['librregadmin.so.1'].key_cell_from_cell
key_cell_from_cell.restype = POINTER(KeyCell)
# key_cell_from_cell(in_cell)
key_cell_from_cell.argtypes = [POINTER(Cell)]
key_cell_from_cell.__doc__ = \
"""KeyCell * key_cell_from_cell(Cell * in_cell)
../../../rregadmin/hive/key_cell.h:104"""
# ../../../rregadmin/hive/key_cell.h 110
key_cell_to_cell = _libraries['librregadmin.so.1'].key_cell_to_cell
key_cell_to_cell.restype = POINTER(Cell)
# key_cell_to_cell(in_kc)
key_cell_to_cell.argtypes = [POINTER(KeyCell)]
key_cell_to_cell.__doc__ = \
"""Cell * key_cell_to_cell(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:110"""
# ../../../rregadmin/hive/key_cell.h 116
key_cell_is_valid = _libraries['librregadmin.so.1'].key_cell_is_valid
key_cell_is_valid.restype = gboolean
# key_cell_is_valid(in_kc)
key_cell_is_valid.argtypes = [POINTER(KeyCell)]
key_cell_is_valid.__doc__ = \
"""gboolean key_cell_is_valid(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:116"""
# ../../../rregadmin/hive/key_cell.h 122
key_cell_get_parent = _libraries['librregadmin.so.1'].key_cell_get_parent
key_cell_get_parent.restype = POINTER(KeyCell)
# key_cell_get_parent(in_kc)
key_cell_get_parent.argtypes = [POINTER(KeyCell)]
key_cell_get_parent.__doc__ = \
"""KeyCell * key_cell_get_parent(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:122"""
# ../../../rregadmin/hive/key_cell.h 130
key_cell_get_type_str = _libraries['librregadmin.so.1'].key_cell_get_type_str
key_cell_get_type_str.restype = STRING
# key_cell_get_type_str(in_kc)
key_cell_get_type_str.argtypes = [POINTER(KeyCell)]
key_cell_get_type_str.__doc__ = \
"""unknown * key_cell_get_type_str(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:130"""
# ../../../rregadmin/hive/key_cell.h 138
key_cell_get_type_id = _libraries['librregadmin.so.1'].key_cell_get_type_id
key_cell_get_type_id.restype = key_cell_type
# key_cell_get_type_id(in_kc)
key_cell_get_type_id.argtypes = [POINTER(KeyCell)]
key_cell_get_type_id.__doc__ = \
"""key_cell_type key_cell_get_type_id(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:138"""
# ../../../rregadmin/hive/key_cell.h 146
key_cell_get_name = _libraries['librregadmin.so.1'].key_cell_get_name
key_cell_get_name.restype = POINTER(ustring)
# key_cell_get_name(in_kc)
key_cell_get_name.argtypes = [POINTER(KeyCell)]
key_cell_get_name.__doc__ = \
"""ustring * key_cell_get_name(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:146"""
# ../../../rregadmin/hive/key_cell.h 154
key_cell_get_classname = _libraries['librregadmin.so.1'].key_cell_get_classname
key_cell_get_classname.restype = POINTER(ustring)
# key_cell_get_classname(in_kc)
key_cell_get_classname.argtypes = [POINTER(KeyCell)]
key_cell_get_classname.__doc__ = \
"""ustring * key_cell_get_classname(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:154"""
# ../../../rregadmin/hive/key_cell.h 160
key_cell_compare_names = _libraries['librregadmin.so.1'].key_cell_compare_names
key_cell_compare_names.restype = c_int
# key_cell_compare_names(in_kc1, in_kc2)
key_cell_compare_names.argtypes = [POINTER(KeyCell), POINTER(KeyCell)]
key_cell_compare_names.__doc__ = \
"""int key_cell_compare_names(KeyCell * in_kc1, KeyCell * in_kc2)
../../../rregadmin/hive/key_cell.h:160"""
# ../../../rregadmin/hive/key_cell.h 166
key_cell_get_number_of_values = _libraries['librregadmin.so.1'].key_cell_get_number_of_values
key_cell_get_number_of_values.restype = guint32
# key_cell_get_number_of_values(in_kc)
key_cell_get_number_of_values.argtypes = [POINTER(KeyCell)]
key_cell_get_number_of_values.__doc__ = \
"""guint32 key_cell_get_number_of_values(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:166"""
# ../../../rregadmin/hive/key_cell.h 172
key_cell_get_value = _libraries['librregadmin.so.1'].key_cell_get_value
key_cell_get_value.restype = POINTER(ValueKeyCell)
# key_cell_get_value(in_kc, in_index)
key_cell_get_value.argtypes = [POINTER(KeyCell), guint32]
key_cell_get_value.__doc__ = \
"""ValueKeyCell * key_cell_get_value(KeyCell * in_kc, guint32 in_index)
../../../rregadmin/hive/key_cell.h:172"""
# ../../../rregadmin/hive/key_cell.h 178
key_cell_get_value_str = _libraries['librregadmin.so.1'].key_cell_get_value_str
key_cell_get_value_str.restype = POINTER(ValueKeyCell)
# key_cell_get_value_str(in_kc, in_name)
key_cell_get_value_str.argtypes = [POINTER(KeyCell), STRING]
key_cell_get_value_str.__doc__ = \
"""ValueKeyCell * key_cell_get_value_str(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:178"""
# ../../../rregadmin/hive/key_cell.h 184
key_cell_get_value_ustr = _libraries['librregadmin.so.1'].key_cell_get_value_ustr
key_cell_get_value_ustr.restype = POINTER(ValueKeyCell)
# key_cell_get_value_ustr(in_kc, in_name)
key_cell_get_value_ustr.argtypes = [POINTER(KeyCell), POINTER(ustring)]
key_cell_get_value_ustr.__doc__ = \
"""ValueKeyCell * key_cell_get_value_ustr(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:184"""
# ../../../rregadmin/hive/key_cell.h 190
key_cell_delete_value = _libraries['librregadmin.so.1'].key_cell_delete_value
key_cell_delete_value.restype = gboolean
# key_cell_delete_value(in_kc, in_index)
key_cell_delete_value.argtypes = [POINTER(KeyCell), guint32]
key_cell_delete_value.__doc__ = \
"""gboolean key_cell_delete_value(KeyCell * in_kc, guint32 in_index)
../../../rregadmin/hive/key_cell.h:190"""
# ../../../rregadmin/hive/key_cell.h 196
key_cell_delete_value_str = _libraries['librregadmin.so.1'].key_cell_delete_value_str
key_cell_delete_value_str.restype = gboolean
# key_cell_delete_value_str(in_kc, in_name)
key_cell_delete_value_str.argtypes = [POINTER(KeyCell), STRING]
key_cell_delete_value_str.__doc__ = \
"""gboolean key_cell_delete_value_str(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:196"""
# ../../../rregadmin/hive/key_cell.h 202
key_cell_delete_value_ustr = _libraries['librregadmin.so.1'].key_cell_delete_value_ustr
key_cell_delete_value_ustr.restype = gboolean
# key_cell_delete_value_ustr(in_kc, in_name)
key_cell_delete_value_ustr.argtypes = [POINTER(KeyCell), POINTER(ustring)]
key_cell_delete_value_ustr.__doc__ = \
"""gboolean key_cell_delete_value_ustr(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:202"""
# ../../../rregadmin/hive/key_cell.h 209
key_cell_add_value = _libraries['librregadmin.so.1'].key_cell_add_value
key_cell_add_value.restype = POINTER(ValueKeyCell)
# key_cell_add_value(in_kc, in_name, in_val)
key_cell_add_value.argtypes = [POINTER(KeyCell), STRING, POINTER(Value)]
key_cell_add_value.__doc__ = \
"""ValueKeyCell * key_cell_add_value(KeyCell * in_kc, unknown * in_name, unknown * in_val)
../../../rregadmin/hive/key_cell.h:209"""
# ../../../rregadmin/hive/key_cell.h 222
key_cell_get_number_of_subkeys = _libraries['librregadmin.so.1'].key_cell_get_number_of_subkeys
key_cell_get_number_of_subkeys.restype = guint32
# key_cell_get_number_of_subkeys(in_kc)
key_cell_get_number_of_subkeys.argtypes = [POINTER(KeyCell)]
key_cell_get_number_of_subkeys.__doc__ = \
"""guint32 key_cell_get_number_of_subkeys(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:222"""
# ../../../rregadmin/hive/key_cell.h 228
key_cell_get_subkey = _libraries['librregadmin.so.1'].key_cell_get_subkey
key_cell_get_subkey.restype = POINTER(KeyCell)
# key_cell_get_subkey(in_kc, in_index)
key_cell_get_subkey.argtypes = [POINTER(KeyCell), guint32]
key_cell_get_subkey.__doc__ = \
"""KeyCell * key_cell_get_subkey(KeyCell * in_kc, guint32 in_index)
../../../rregadmin/hive/key_cell.h:228"""
# ../../../rregadmin/hive/key_cell.h 234
key_cell_get_subkey_str = _libraries['librregadmin.so.1'].key_cell_get_subkey_str
key_cell_get_subkey_str.restype = POINTER(KeyCell)
# key_cell_get_subkey_str(in_kc, in_name)
key_cell_get_subkey_str.argtypes = [POINTER(KeyCell), STRING]
key_cell_get_subkey_str.__doc__ = \
"""KeyCell * key_cell_get_subkey_str(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:234"""
# ../../../rregadmin/hive/key_cell.h 240
key_cell_get_subkey_ustr = _libraries['librregadmin.so.1'].key_cell_get_subkey_ustr
key_cell_get_subkey_ustr.restype = POINTER(KeyCell)
# key_cell_get_subkey_ustr(in_kc, in_name)
key_cell_get_subkey_ustr.argtypes = [POINTER(KeyCell), POINTER(ustring)]
key_cell_get_subkey_ustr.__doc__ = \
"""KeyCell * key_cell_get_subkey_ustr(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:240"""
# ../../../rregadmin/hive/key_cell.h 246
key_cell_delete_subkey = _libraries['librregadmin.so.1'].key_cell_delete_subkey
key_cell_delete_subkey.restype = gboolean
# key_cell_delete_subkey(in_kc, in_index)
key_cell_delete_subkey.argtypes = [POINTER(KeyCell), guint32]
key_cell_delete_subkey.__doc__ = \
"""gboolean key_cell_delete_subkey(KeyCell * in_kc, guint32 in_index)
../../../rregadmin/hive/key_cell.h:246"""
# ../../../rregadmin/hive/key_cell.h 252
key_cell_delete_subkey_str = _libraries['librregadmin.so.1'].key_cell_delete_subkey_str
key_cell_delete_subkey_str.restype = gboolean
# key_cell_delete_subkey_str(in_kc, in_name)
key_cell_delete_subkey_str.argtypes = [POINTER(KeyCell), STRING]
key_cell_delete_subkey_str.__doc__ = \
"""gboolean key_cell_delete_subkey_str(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:252"""
# ../../../rregadmin/hive/key_cell.h 258
key_cell_delete_subkey_ustr = _libraries['librregadmin.so.1'].key_cell_delete_subkey_ustr
key_cell_delete_subkey_ustr.restype = gboolean
# key_cell_delete_subkey_ustr(in_kc, in_name)
key_cell_delete_subkey_ustr.argtypes = [POINTER(KeyCell), POINTER(ustring)]
key_cell_delete_subkey_ustr.__doc__ = \
"""gboolean key_cell_delete_subkey_ustr(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:258"""
# ../../../rregadmin/hive/key_cell.h 264
key_cell_add_subkey = _libraries['librregadmin.so.1'].key_cell_add_subkey
key_cell_add_subkey.restype = POINTER(KeyCell)
# key_cell_add_subkey(in_kc, in_name)
key_cell_add_subkey.argtypes = [POINTER(KeyCell), POINTER(ustring)]
key_cell_add_subkey.__doc__ = \
"""KeyCell * key_cell_add_subkey(KeyCell * in_kc, unknown * in_name)
../../../rregadmin/hive/key_cell.h:264"""
# ../../../rregadmin/hive/key_cell.h 273
key_cell_set_key_list_cell = _libraries['librregadmin.so.1'].key_cell_set_key_list_cell
key_cell_set_key_list_cell.restype = gboolean
# key_cell_set_key_list_cell(in_kc, in_klc, in_recursive)
key_cell_set_key_list_cell.argtypes = [POINTER(KeyCell), POINTER(KeyListCell), gboolean]
key_cell_set_key_list_cell.__doc__ = \
"""gboolean key_cell_set_key_list_cell(KeyCell * in_kc, KeyListCell * in_klc, gboolean in_recursive)
../../../rregadmin/hive/key_cell.h:273"""
# ../../../rregadmin/hive/key_cell.h 281
key_cell_get_key_list_cell = _libraries['librregadmin.so.1'].key_cell_get_key_list_cell
